# akgentic-llm

./: .gitignore  README.md  pyproject.toml  quick_start.py
.github/workflows/: ci.yml
examples/: README.md
src/akgentic/: __init__.py
src/akgentic/llm/: __init__.py  agent.py  config.py  context.py  event.py  pricing.py  pricing.yaml  prompts.py  providers.py
tests/: __init__.py  test_agent.py  test_config.py  test_context.py  test_event_serialization.py  test_exports.py  test_heal_tool_calls.py  test_pricing.py  test_prompts.py  test_providers.py  test_tool_events.py  test_usage_event.py
